--- a/suivi_temperature/temperature.ipynb
+++ b/suivi_temperature/temperature.ipynb
@@ -12,7 +12,7 @@
     "- Détecter les jours où la température dépasse un seuil critique.\n",
     "- Générer un graphique de l'évolution de la température.\n",
     "\n",
-    "AUTEUR : GBRA EMMANUEL / KOKOLA EMMANUEL / FIENI ANDY\n",
+    "AUTEUR : GBRA EMMANUEL / FIENI ANDY\n",
     "\n",
     "Eranove ACADEMY\n",
     "\n",
